# poly_vector

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  poly_vector_notes.md
CMakeModules/: catch.cmake  config.cmake
benchmark/: CMakeLists.txt  benchmark.vcxproj  benchmark.vcxproj.filters
benchmark/src/: CMakeLists.txt  main.cpp
cmake/: ConfigureFeatures.cmake  PolyVectorConfig.cmake.in  has_allocator_always_equal.cpp  has_disjunction.cpp  has_stl_type_aliases.cpp
doc/raw/: demo_hierarchy.graphml  poly_vec.graphml  poly_vec_fig.graphml  std_vec.graphml
examples/example1/: CMakeLists.txt  example1.cpp
include/: poly_vector.h
include/poly/: vector.h
include/poly/detail/: vector_config.h.in  vector_impl.h
measurements/: .~lock.measurements.ods#  meas.bat  measurements.ods
scripts/: genreport.sh
test/: CMakeLists.txt
test/include/: catch_ext.hpp  test_poly_vector.h
test/src/: test_poly_vector.cpp  test_poly_vector_meta.cpp
visualizer/: poly_vector.natvis
